# fitness-trainer

./: .dockerignore  .env.example  .gitignore  CHAT_README.md  CHAT_SETUP.md  DOCKER_COOLIFY_GUIDE.md  Dockerfile  GOOGLE_OAUTH_SETUP.md  OFFLINE_GUIDE.md  UPDATE_GUIDE.md  alembic.ini  app_simple.py  init_db.py  nixpacks.toml  pyproject.toml  requirements.txt  run_simple.py  setup_env.py  test_app.py
app/: __init__.py  chat.py  exercises.py  models.py
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_add_chat_functionality.py  003_add_exercise_scores.py  004_per_set_and_targets.py  005_backfill_quality_scores.py  88ac99f98349_add_energy_burn_and_user_profile.py
static/: manifest.json
static/css/: app.css
static/icons/: create-icons.js
static/js/: chat.js  exercise.js  offline.js  service-worker.js  update-manager.js
templates/: base.html  calculator.html  calories.html  chat.html  exercise.html  food.html  index.html  neat.html  offline.html  settings.html
